--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Catalog": "Data Source=DESKTOP-0QIM32L;Initial Catalog=eShopOnContainersCatalog;Integrated Security=True"
+    "Catalog": "Server=catalog.db;Data Source=catalog.db;Database=master;User=sa;Password=Catalog_123"
   }
 }
