--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,13 @@ services:
       - ./src/Services/Catalog/Catalog.DB/entrypoint.sh:/entrypoint.sh
       - ./src/Services/Catalog/Catalog.DB/eShopOnContainersCatalog.sh:/eShopOnContainersCatalog.sh
       - ./src/Services/Catalog/Catalog.DB/eShopOnContainersCatalog.sql:/eShopOnContainersCatalog.sql
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: src/Services/Basket/Basket.API/Dockerfile
+    depends_on:
+      - basket.db
   basket.db:
     container_name: ${DOCKER_REGISTRY-}Basket.DB
-    image: redis:alpine
-    
+    image: redis:alpine    
