--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Services": {
+    "Catalog.API": "http://catalog.api"
+  },
   "AllowedHosts": "*"
 }
