--- a/src/Web/WebSPA/WebSPA.csproj
+++ b/src/Web/WebSPA/WebSPA.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <OpenApiReference Include="..\..\Services\Basket\Basket.API\BasketAPI.json" CodeGenerator="NSwagCSharp" Namespace="WebSPA.Services.Basket" Link="OpenAPIs\BasketAPI.json" />
     <OpenApiReference Include="..\..\Services\Catalog\Catalog.API\CatalogAPI.json" Namespace="WebSPA.Services.Catalog">
       <CodeGenerator>NSwagCSharp</CodeGenerator>
       <Link>OpenAPIs\CatalogAPI.json</Link>
