--- a/src/Web/WebSPA/appsettings.json
+++ b/src/Web/WebSPA/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "Services": {
-    "Catalog.API": "http://catalog.api"
+    "Catalog.API": "http://catalog.api",
+    "Basket.API": "http://basket.api"
   },
   "AllowedHosts": "*"
 }
