First implementation of API Gateway and Ordering Service fix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     depends_on:
       - basket.api
       - catalog.api
+      - ordering.api
   cdn:
     image: halverneus/static-file-server
     ports:
