--- a/src/Web/WebSPA/appsettings.json
+++ b/src/Web/WebSPA/appsettings.json
@@ -8,7 +8,8 @@
   },
   "Services": {
     "Catalog.API": "http://catalog.api",
-    "Basket.API": "http://basket.api"
+    "Basket.API": "http://basket.api",
+    "Ordering.API": "https://ordering.api"
   },
   "AllowedHosts": "*"
 }
