--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -9,5 +9,8 @@
   "Services": {
     "Catalog.API": "http://catalog.api"
   },
+  "EventBus": {
+    "Rabbit": "bus"
+  },
   "AllowedHosts": "*"
 }
