--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -9,6 +9,9 @@
   "Services": {
     "Catalog.API": "http://catalog.api"
   },
+  "ConnectionStrings": {
+    "Basket": "redis.db"
+  },
   "EventBus": {
     "Rabbit": "bus"
   },
