--- a/src/Services/Ordering/Ordering.API/Ordering.API.csproj
+++ b/src/Services/Ordering/Ordering.API/Ordering.API.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="StackExchange.Redis" Version="2.1.58" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\EventBus\EventBus.csproj" />
+  </ItemGroup>
+
 </Project>
