--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "ConnectionStrings": {
-    "Basket": "redis.db"
+    "Ordering": "redis.db"
   },
   "EventBus": {
     "Rabbit": "bus"
