--- a/src/Services/Catalog/Catalog.API/appsettings.Development.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "Catalog": "Server=catalog.db;Data Source=catalog.db;Database=master;User=sa;Password=Catalog_123"
+    "Catalog": "Server=mssql.db;Data Source=mssql.db;Database=master;User=sa;Password=Catalog_123"
   }
 }
