--- a/src/Web/WebIdentity/appsettings.json
+++ b/src/Web/WebIdentity/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "Identity": "Server=mssql.db;Data Source=mssql.db;Database=master;User=sa;Password=Catalog_123",
+    "DefaultConnection": "Data Source=/AspIdUsers.db;"
   }
 }
