--- a/src/Web/WebSPA/ClientApp/package.json
+++ b/src/Web/WebSPA/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "oidc-client": "1.4.1",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
