--- a/src/Web/WebSPA/ClientApp/package.json
+++ b/src/Web/WebSPA/ClientApp/package.json
@@ -16,7 +16,8 @@
     "react-query": "^1.5.6",
     "react-scripts": "3.4.1",
     "react-use": "^15.2.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "uuid": "8.2.0"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
